chore: replace Allure with ExtentReports